--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         <section>
             <h3 id="result"></h3>
         </section>
+        <section>
+            <h3>Name</h3>
+            <input>
+            <button id="whatever">whaddup</button>
+        </section>
     </main>
     <!--JavaScript at end of body for optimized loading-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
