--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main class="container center-align">
         <div class="row">
-            <section class="col s6">
+            <section class="col s4">
                 <h5 id="player1">Player 1</h5>
                 <div class="collection">
                     <a href="#!" class="collection-item waves-effect waves-teal">Rock</a>
@@ -28,8 +28,10 @@
                     <p class="col s6">Losses: <span id="player1-losses">0</span></p>
                 </div>
             </section>
-
-            <section class="col s6">
+            <section class="col s4">
+                    <h3 id="result"></h3>
+                </section>
+            <section class="col s4">
                 <h5 id="player2">Player 2</h5>
                 <div class="collection">
                     <a href="#!" class="collection-item waves-effect waves-teal">Rock</a>
@@ -42,19 +44,39 @@
                 </div>
             </section>
         </div>
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Messages</span>
+                <div id="message-list" style="overflow-y: scroll; height: 25vh; word-break: break-word;"></div>
+            </div>
+            <div class="card-action">
+                <form>
+                    <div class="input-field">
+                        <textarea id="message-text" class="materialize-textarea"></textarea>
+                        <label for="message-text">Message</label>
+                    </div>
+                    <button type="submit" id="message-button" class="modal-close btn waves-effect waves-light">Send</button>
+                </form>
+            </div>
+        </div>
         <section>
-            <h3 id="result"></h3>
-        </section>
-        <section>
-            <h3>Name</h3>
-            <input>
-            <button id="whatever">whaddup</button>
+            <div id="name-modal" class="modal">
+                <div class="modal-content">
+                    <form>
+                        <div class="input-field">
+                            <input id="name-input" type="text" class="validate">
+                            <label for="name-input" class="active">Name</label>
+                        </div>
+                        <button type="submit" id="name-button" class="modal-close btn waves-effect waves-light">Play</button>
+                    </form>
+                </div>
+            </div>
         </section>
     </main>
     <!--JavaScript at end of body for optimized loading-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.5.7/firebase.js"></script>
     <script src="logic.js"></script>
 </body>
