adjusted user display a little bit

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <section class="col s4">
                 <h5 id="player1">Player 1</h5>
                 <div class="collection">
-                    <a href="#!" class="collection-item waves-effect waves-teal">Rock</a>
-                    <a href="#!" class="collection-item waves-effect waves-teal">Paper</a>
-                    <a href="#!" class="collection-item waves-effect waves-teal">Scissors</a>
+                    <a href="#!" class="collection-item btn disabled">Rock</a>
+                    <a href="#!" class="collection-item btn disabled">Paper</a>
+                    <a href="#!" class="collection-item btn disabled">Scissors</a>
                 </div>
                 <div class="row">
                     <p class="col s6">Wins: <span id="player1-wins">0</span></p>
@@ -34,9 +34,9 @@
             <section class="col s4">
                 <h5 id="player2">Player 2</h5>
                 <div class="collection">
-                    <a href="#!" class="collection-item waves-effect waves-teal">Rock</a>
-                    <a href="#!" class="collection-item waves-effect waves-teal">Paper</a>
-                    <a href="#!" class="collection-item waves-effect waves-teal">Scissors</a>
+                    <a href="#!" class="collection-item btn disabled">Rock</a>
+                    <a href="#!" class="collection-item btn disabled">Paper</a>
+                    <a href="#!" class="collection-item btn disabled">Scissors</a>
                 </div>
                 <div class="row">
                     <p class="col s6">Wins: <span id="player2-wins">0</span></p>
